yoshimi 1.5.1 rc1

2017-3-19 Will
* Bugfix: Rotary controls were making pairs of calls.
* Installed new splash screen and updated notices.
* Set master as 1.5.1 rc1

2017-3-18 Will
* BugFix: Direct access Eq.T. dial deactivated in error.
* Implemented forgotten direct access subsynth bend and offset.
* Updated docs.

2017-3-17 Jesper
* AddSynth gui - sync voice list when changing detune type
* AddSynth section labels now consistent with the other synths.
* Minor graphical corrections - overlapping margins etc.
* Bugfix: Sliders behaved incorrectly when min>max
  specifically when using control-mousewheel to change value

2017-3-17 Will
* Part naming now goes through ring buffers.
* BugFix: Recent state loading failed
  due to missing lines in ParametersUI.fl
* Small adjustments to messageing.
* State reload now clears all parts before loading new ones.

2017-3-16 Will
* Bugfix: part volume was not being activated on load
  but only if the saved value was 95! There was a similar
  less important issue with panning.
* Small optimisation in Gui freemode enable switch.

2017-3-15 Will
* Added correction from Jesper to tooltips code.
* Direct access now enables envelope freemode in Gui
  but still doesn't do redraws.

2017-3-14 Will
* Updated auto window position control.
* Removed some auto window opens due to conflicts.

2017-3-13 Will
* Enabled Gui updates for dynfilter controls 7,8,9.
* Doc updates.

2017-3-12 Will.
* Updated /dev_notes/Effect_Inserts.txt
* Removed boost dependency based on ideas from Rob.
* Made EQ reporting more human-readable :)
* Corrected EQ band selector reporting/adjustment.
  It's not a parameter.
* Reverted boost change pending further investigation.

2017-3-12 Jesper
* Bugfix: Segfault from tooltip text handling in slider
  when creating new instances of yoshimi.
* Bugfix: All dials on the EQ effects can now be midi-learned.

2017-3-12 Will
* Added more reliable way of detecting Midi-learn NRPNs.